...
    <string name="error_title">エラー</string>
    <string name="error_message">問題が発生しました。\nもう一度お試しください。</string>
    <string name="no_items_found_title">項目が見つかりませんでした</string>
    <string name="no_items_found_message">\n有効な検索条件を入力してください。</string>
    <string name="invalid_input_title">無効な入力</string>
    <string name="invalid_input_message">「#」から始まる入力は許可されていません。</string>
    <string name="enter_search_query">検索クエリを入力してください</string>
    <string name="close_button_description">Close</string>
    <style name="HintTextAppearance" parent="TextAppearance.Design.Hint">
        <item name="android:textSize">10sp</item>
    </style>
    <string name="copy_url">Copy URL</string>
    <string name="share">Share</string>
...
