...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ownerIconView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/unknown"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/textColorPrimary"
...
